edit manual to cameras

--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Camera Manuals | Camera Manual Archive</title>
+  <title>Cameras</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="wrapper">
-      <a class="site-title" href="index.html">Camera Manual Archive</a>
+      <a class="site-title" href="index.html">How to use the Cameras</a>
       <nav class="site-nav">
         <a href="index.html">Home</a>
-        <a href="cameras.html">Camera Manuals</a>
+        <a href="cameras.html">Cameras</a>
       </nav>
     </div>
   </header>
-  
+
   <main class="content">
     <div class="home">
-      <h1>Camera Manual Archive</h1>
-      <p>Welcome to our collection of camera manuals in PDF format.</p>
-      
+      <h1>Cameras</h1>
+      <p>Hints and tips on using the point and shoot cameras</p>
+
       <div class="featured">
-        <h2>Featured Manuals</h2>
-        <p>Check out our <a href="cameras.html">complete collection</a> of camera manuals.</p>
+        <h2>Featured</h2>
+        <p>Check out our <a href="cameras.html"> collection</a> of cameras.</p>
       </div>
     </div>
   </main>
-  
+
   <footer class="site-footer">
     <div class="wrapper">
       <p>&copy; 2025 Camera Manual Archive. All rights reserved.</p>
