--- a/cameras/kodak-vr35-k40.html
+++ b/cameras/kodak-vr35-k40.html
@@ -1,6 +1,6 @@
 ---
 layout: camera
 title: Kodak VR35 K40
-permalink: /cameras/kodak-vr35-k40
+permalink: /cameras/kodak-vr35-k40/
 camera_id: kodak-vr35-k40
 ---
