--- a/cameras/nikon-one-touch.html
+++ b/cameras/nikon-one-touch.html
@@ -1,6 +1,6 @@
 ---
 layout: camera
-title: Nikon One Touch
-permalink: /camera/nikon-one-touch/
+title: Nikon One Touch LF35AF2
+permalink: /cameras/nikon-one-touch/
 camera_id: nikon-one-touch
 ---
