--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@ layout: default
 title: Home
 ---
 <div class="home">
-  <h1>Vintage Camera Archive</h1>
-  <p>Your ultimate resource for classic point and shoot cameras</p>
-  
+  <h1>Cameras, cameras, cameras</h1>
   <div class="featured">
     <h2>Featured Cameras</h2>
     <div class="featured-cameras">
@@ -17,6 +15,6 @@ title: Home
         </div>
       {% endfor %}
     </div>
-    <p class="view-all">View our complete <a href="/cameras/">camera collection</a></p>
+    <p class="view-all">All of the  <a href="/cameras/">camera collection</a></p>
   </div>
 </div>
